add new comment for api doc
